# hola-private

./: .gitignore  .pre-commit-config.yaml  DISTRIBUTED_SETUP.md  README.md  REFACTORING_PLAN.md  beamer_template.tex  client_demo.py  file_concat.py  monitor.py  pyproject.toml  remote_worker.py  run_distributed.sh  test.py  test_monitor.py  test_sorted_population_doc.py  test_websocket.py  visualization_demo.py
archive/: hola_sandbox.py  hola_server_multi  igr_algorithm.py  multiclient_server.py  objective_multivariate.py  params_multivariate.py  sample_multivariate.py  worker.py
archive/core/: algorithm.py  leaderboard.py  objective.py  params_old.py  sample.py  sorted_population.py  utils.py
archive/tests/: test_worker.py
archive/tests/core/: test_algorithm.py  test_leaderboard.py  test_params.py  test_sample.py  test_sorted_population.py  test_utils.py
examples/: distributed_example.py  run_distributed.py  run_monitor.sh  sampler_metadata_example.py  sqlite_repository_demo.py  streamlit_monitor.py
hola/: __init__.py  hola.py
hola/cli/: __init__.py  run.py
hola/client/: app.py  bridge.py  client.py  config.py  handler.py
hola/core/: algorithm.py  coordinator.py  leaderboard.py  monitor.py  objective.py  objectives.py  parameters.py  params.py  poset.py  repository.py  sample.py  samplers.py  scheduler.py  sorted_population.py  system.py  utils.py
hola/distributed/: README_MONITOR.md  __init__.py  clean_processes.py  http_example.py  messages.py  monitor.py  scheduler.py  server.py  utils.py  worker.py  zmq_example.py  zmq_monitor_example.py
hola/messages/: __init__.py  base.py  client.py  errors.py  protocol.py  rest.py  scheduler.py  server.py  worker.py
hola/monitor/: run_dashboard.py  streamlit_dashboard.py
hola/network/: scheduler.py  server.py  worker.py
hola/server/: __init__.py  base.py  config.py  loops.py  monitor.py  rest.py  scheduler.py  server.py  status.py
hola/server/api/: app.py
hola/server/handlers/: __init__.py  client.py  worker.py
hola/server/worker/: client.py
hola/utils/: config.py  logging.py
hola/worker/: __init__.py  base.py  config.py  handler.py  local.py  status.py  util.py  worker.py
tests/: test_save_load.py
tests/core/: test_algorithm.py  test_leaderboard.py  test_objective.py  test_params.py  test_sorted_population.py
tests/distributed/: test_messages.py  test_scheduler.py  test_server.py  test_utils.py  test_worker.py
tests/test_core/: test_leaderboard.py  test_objectives.py  test_parameters.py  test_poset.py  test_samplers.py  test_utils.py
